src/components/home/home.css
.home__container {
    row-gap: 7rem;
}

.home__content {
    display: grid;
    grid-template-columns: 116px repeat(2, 1fr);
    padding-top: 5.5rem;
    column-gap: 2rem;
    align-items: center;
    justify-content: center; /* Center align content horizontally */
    text-align: center; /* Center align text */
}

.home__social {
    display: grid;
    grid-template-columns: max-content;
    row-gap: 1rem;
}

.home__social-icon {
    font-size: 1.25rem;
    color: var(--title-color);
}

.home__social-icon:hover {
    color: var(--title-color-dark);
}

.home__title {
    font-size: var(--big-font-size);
    margin-bottom: var(--mb-0-25);
    white-space: nowrap;
}

.home__hand {
    width: 38px;
    height: 38px;
    margin-left: 0.4rem;
}

.home__subtitle {
    position: relative;
    font-size: var(--h2-font-size);
    font-weight: var(--font-normal);
    margin-bottom: var(--mb-1);
}


.home__description {
    max-width: 400px;
    margin-bottom: var(--mb-3);
    font-size: var(--h3-font-size);
}

.home__img {
    background: url(../../assets//harshitMac.jpg);
    background-repeat: no-repeat;
    background-position: center top;
    background-size: cover;
    box-shadow: inset 0 0 0 9px rgb(225 225 225 / 30%);
    width: 300px;
    height: 300px;
    animation: profile__animate 8s ease-in-out infinite 1s;
}

.say-hello-btn {
    background-color: #313FFF; 
    color: #fff; 
    border: none; 
    padding: 1rem 2rem; 
    font-size: 1.125rem; 
    border-radius: 0.75rem; 
    display: inline-flex; 
    align-items: center; 
    justify-content: center; 
    cursor: pointer; 
    transition: background-color 0.3s ease; 
}

.say-hello-btn:hover {
    background-color: #0011FF;
}

@keyframes profile__animate {
    0% {
        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
    }
    50% {
        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
    }
    100% {
        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
    }
}

.home__scroll {
    margin-left: 9.25rem;
}

.wheel {
    animation: scroll 2s ease infinite;
}

@keyframes scroll {
    0% {
        transform: translateY(0);
    }
    30% {
        transform: translateY(3.75rem);
    }
}

.home__scroll-name {
    color: var(--title-color);
    font-weight: var(--font-medium);
    margin-right: var(--mb-0-25);
    margin-left: 2px;
}

.home__scroll-arrow {
    font-size: 1.25rem;
    color: var(--title-color);
}

/* BREAK POINTS */
@media screen and (max-width: 992px) {
    .home__content {
        grid-template-columns: 100px repeat(2, 1fr);
        column-gap: 1.25rem;
        justify-content: center;
    }

    .home__hand {
        width: 26px;
        height: 26px;
    }

    .home__subtitle {
        padding-left: 3.75rem;
        margin-bottom: var(--mb-1);
    }

    .home__subtitle::before {
        width: 42px;
        top: 0.8rem;
    }
    
    .home__description {
        max-width: initial;
        margin-bottom: var(--mb-2-5);
    }

    .home__img {
        width: 250px;
        height: 250px;
        box-shadow: inset 0 0 0 8px rgb(225 225 225 / 30%);
    }

    .home__scroll {
        margin-left: 7.5rem;
    }
}

@media screen and (max-width: 768px) {
    .home__content {
        grid-template-columns: 1fr;
        padding-top: 3.5rem;
    }

    .home__img {
        order: initial;
        justify-self: initial;
        box-shadow: inset 0 0 0 6px rgb(225 225 225 / 30%);
        width: 200px;
        height: 200px;
        margin-bottom: 2rem; /* Adjust margin as needed */
    }

    .home__data {
        grid-column: 1/3;
    }

    .home__scroll {
        display: none;
    }
}

@media screen and (max-width: 350px) {
    .home__img {
        width: 180px;
        height: 180px;
    }

    .home__hand {
        width: 22px;
        height: 22px;
    }
}

